# example-ai-collaboration

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  ecosystem.yaml  pyproject.toml  seed.yaml
.github/: dependabot.yml
.github/workflows/: ci-python.yml  ci.yml
docs/: process-template.md
docs/adr/: 001-initial-architecture.md  002-integration-patterns.md
docs/pitch/: index.html
examples/: demo_code_session.py  demo_text_session.py
src/: __init__.py  attribution.py  conductor.py  export.py  metrics.py  session.py
tests/: test_attribution.py  test_conductor.py  test_export.py  test_metrics.py  test_session.py
workflows/: __init__.py  code_generation.py  text_generation.py
