[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example-ai-collaboration"
version = "0.1.0"
description = "AI-conductor collaboration tracking system"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
